# SingleCore-AC

./: .gitignore
modules/bot/playerbot/: PlayerbotAIConfig.cpp  PlayerbotAIConfig.h  PlayerbotFactory.cpp  RandomPlayerbotFactory.cpp  aiplayerbot.conf.dist  aiplayerbot.conf.dist.in
modules/mod-betterbots/: CMakeLists.txt
modules/mod-betterbots/conf/: BetterBots.conf.dist  my_custom.conf.dist
modules/mod-betterbots/src/: BetterBots.cpp  loader.h
modules/mod-betterbots/src/cmake/: after_ws_install.cmake
modules/mod-premium/src/: premium.cpp
modules/mod-randomenchants/src/: mod_randomenchants.cpp
modules/mod-spell-regulator/src/: SpellRegulator.h
modules/mod-weapon-visual-master/sql/world/: Npc_VisualWeapon.sql
src/server/game/Entities/Player/: Player.cpp
src/server/game/Entities/Unit/: Unit.cpp
src/server/scripts/Commands/: cs_reload.cpp
